# pyflyby

./: .buildinfo  .gitignore  .pyflyby  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  codecov.yml  conf.py  conftest.py  genindex.html  github_deploy_key_deshaw_pyflyby.enc  import_library  index.html  index.rst  known_imports  meson.build  mypy.ini  objects.inv  push_docs.sh  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: actionlint.yml  build.yml  docs.yml  lint.yml  test.yml  zizmor.yml
_sources/: index.rst.txt
_sources/api/: api.rst.txt  dbg.rst.txt  file.rst.txt  format.rst.txt  idents.rst.txt  importclns.rst.txt  importdb.rst.txt  importstmt.rst.txt  log.rst.txt  parse.rst.txt  py.rst.txt
_static/: documentation_options.js
admin/: _fn  _imports.py  pyflyby-collect-imports  pyflyby-tidy-imports
api/: api.html  autoimp.html  cmdline.html  comms.html  dbg.html  file.html  flags.html  format.html  idents.html  importclns.html  importdb.html  imports2s.html  importstmt.html  interactive.html  livepatch.html  log.html  modules.html  parse.html  py.html  util.html
doc/: LICENSE.txt  Makefile  README.rst  README.txt  TODO.txt  api.rst  conf.py  example_transform_imports.py  index.rst  push_docs.sh  testing.txt
doc/api/: api.rst  autoimp.rst  autoimport.rst  cmdline.rst  comms.rst  dbg.rst  file.rst  flags.rst  idents.rst  imports2s.rst  interactive.rst  livepatch.rst  modules.rst  util.rst  version.rst
doc/cli/: autoipython.rst  cli.rst  collect_exports.rst  collect_imports.rst  find_import.rst  prune_broken_imports.rst  py.rst  pyflyby_diff.rst  reformat_imports.rst  replace_star_imports.rst  tidy_imports.rst  transform_imports.rst
etc/pyflyby/: canonical.py  common.py  forget.py  mandatory.py  numpy.py  std.py
lib/emacs/: pyflyby.el
lib/python/: .gitignore
lib/python/pyflyby/: __init__.py  __main__.py  _autoimp.py  _autoimport.py  _autoipython.py  _bin_autoipython.py  _bin_collect_exports.py  _bin_collect_imports.py  _bin_find_import.py  _bin_list_bad_xrefs.py  _bin_prune_broken_imports.py  _bin_py.py  _bin_reformat_imports.py  _bin_replace_star_imports.py  _bin_tidy_imports.py  _bin_transform_imports.py  _cmdline.py  _collect_exports.py  _collect_imports.py  _comms.py  _dbg.py  _docxref.py  _dynimp.py  _fast_iter_modules.pyi  _file.py  _find_import.py  _flags.py  _format.py  _idents.py  _import_sorting.py  _importclns.py  _importdb.py  _imports2s.py  _importstmt.py  _interactive.py  _livepatch.py  _log.py  _modules.py  _parse.py  _prune_broken_imports.py  (+28 more)
libexec/pyflyby/: colordiff  diff-colorize
share/pyflyby/import_library/: sqlalchemy.py  std.py
share/pyflyby/known_imports/: __remove__.py  future.py  numpy.py  sqlalchemy.py  std.py
share/pyflyby/known_imports/.disabled/: sqlalchemy.py
share/pyflyby/mandatory_imports/: future.py
src/: _fast_iter_modules.cpp
test/: xrefs.py
tests/: _test_utils.py  helper_autoeval_foo.py  test-emacs.el  test_0testconfig.py  test_autoimp.py  test_autoimport.py  test_check_parse.py  test_cmdline.py  test_cmdline_changedexit1.py  test_dbg.py  test_docxref.py  test_dynimp.py  test_file.py  test_flags.py  test_format.py  test_idents.py  test_importclns.py  test_importdb.py  test_imports2s.py  test_imports2s_bis.py  test_importstmt.py  test_interactive.py  test_jupyterlab_pyflyby.py  test_livepatch.py  test_log.py  test_logged_list.py  test_modules.py  test_parse.py  test_py.py  test_saveframe.py  test_saveframe_reader.py  test_util.py  tests_sorts.py  xrefs.py
