[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ['lib']
#warn_incomplete_stub = false
warn_unused_configs = true
#ignore_missing_imports = true
follow_imports = 'silent'
# disallow_untyped_defs = true
# ignore_errors = false
# ignore_missing_imports = false
# disallow_untyped_calls = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
# disallow_untyped_decorators = true
warn_redundant_casts = true
exclude = '(?x)(_dbg\.py|_py\.py)'

[[tool.mypy.overrides]]
module = [
    "pyflyby._docxref",
    "pyflyby._interactive",
]
ignore_errors = true
