[build-system]
requires = [
    "meson-python>=0.18.0",
    "pybind11>=2.10.4",
    "setuptools-scm>=8"
]
build-backend = "mesonpy"

[project]
name = "pyflyby"
dynamic = ["version"]
authors = [
  { name = "Karl Chen", email = "quarl@8166.clguba.z.quarl.org" },
]
description = "pyflyby - Python development productivity tools, in particular automatic import management"
license = "MIT"
license-files = ["LICENSE.txt"]
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Interpreters",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "black",
    "tomli; python_version<'3.11'",
    "typing_extensions>=4.6; python_version<'3.12'",
    'prompt_toolkit',
    'platformdirs',
]
[project.urls]
Homepage = "https://pypi.org/project/pyflyby/"
Documentation = "https://deshaw.github.io/pyflyby/"
Source = "https://github.com/deshaw/pyflyby"

[project.scripts]
py = "pyflyby._py:py_main"
py3 = "pyflyby._py:py_main"

[project.optional-dependencies]
test = [
    'beartype',
    'build',
    'coverage',
    'flaky',
    'hypothesis',
    'ipykernel>=5.4.3',
    'ipython',
    'jupyter',
    'jupyter_console>=6.2',
    'notebook<6.1',
    'pexpect>=3.3',
    'pytest-cov',
    'pytest-json-report',
    'pytest<=8',
    'requests',
]

[dependency-groups]
lint = [
    'flake8',
    'mypy',
    'pyflakes',
]
docs = [
    'sphinx',
    'sphinx_rtd_theme',
    'sphinx-autodoc-typehints',
]

[tool.mypy]
files = ["lib"]
#warn_incomplete_stub = false
warn_unused_configs = true
#ignore_missing_imports = true
follow_imports = "silent"
# disallow_untyped_defs = true
# ignore_errors = false
# ignore_missing_imports = false
# disallow_untyped_calls = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
# disallow_untyped_decorators = true
warn_redundant_casts = true
exclude = '(?x)(_dbg\.py|_py\.py)'

[[tool.mypy.overrides]]
module = [
    "pyflyby._interactive",
]
ignore_errors = true

[tool.pytest.ini_options]
# Output and reporting
addopts = [
    "--strict-markers",
    "--durations=10",
    "-ra",
]
# Markers for organizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.setuptools_scm]
version_file = "lib/python/pyflyby/_version.py"

[tool.ruff]
exclude = ["etc/pyflyby"]
