py.install_sources(
  [
    '__init__.py',
    '__main__.py',
    '_autoimp.py',
    '_cmdline.py',
    '_comms.py',
    '_dbg.py',
    '_dynimp.py',
    '_file.py',
    '_flags.py',
    '_format.py',
    '_idents.py',
    '_import_sorting.py',
    '_importclns.py',
    '_importdb.py',
    '_imports2s.py',
    '_importstmt.py',
    '_interactive.py',
    '_livepatch.py',
    '_log.py',
    '_modules.py',
    '_parse.py',
    'check_parse.py',
    '_py.py',
    '_saveframe.py',
    '_saveframe_reader.py',
    '_util.py',
    '_version.py',
    'autoimport.py',
    'importdb.py',
  ],
  subdir: 'pyflyby',
)
