py.install_sources(
  [
    '__init__.py',
    '__main__.py',
    '_autoimp.py',
    '_autoipython.py',
    '_cmdline.py',
    '_collect_exports.py',
    '_collect_imports.py',
    '_comms.py',
    '_dbg.py',
    '_dynimp.py',
    '_file.py',
    '_find_import.py',
    '_flags.py',
    '_format.py',
    '_idents.py',
    '_import_sorting.py',
    '_importclns.py',
    '_importdb.py',
    '_imports2s.py',
    '_importstmt.py',
    '_interactive.py',
    '_livepatch.py',
    '_log.py',
    '_modules.py',
    '_parse.py',
    '_prune_broken_imports.py',
    'check_parse.py',
    '_py.py',
    '_reformat_imports.py',
    '_replace_star_imports.py',
    '_saveframe.py',
    '_saveframe_reader.py',
    '_tidy_imports.py',
    '_transform_imports.py',
    '_util.py',
    '_version.py',
    'autoimport.py',
    'importdb.py',
  ],
  subdir: 'pyflyby',
)
